HISTORY

[Version x.y.z (x86 w2k driver size in Kbytes)   release date]

  Version 3.3.0 (65.5)   2009-12-
  ------------------------------------------------------------------------------
    - volume optimization algorithm was highly improved
    - fragments threshold filter parameter was added
    - portable version was highly improved
    - few little bugs were fixed

    - since this version native 64-bit binaries aren't available
      due to the C compilers internal bugs (Windows DDK, Windows SDK, Pelles C, 
      MinGW x64 were tested); portable UltraDefrag can be used now on all of the  
      64-bit systems instead of the native 64-bit packages.

    - NOTE FOR PROGRAMMERS: to successfully compile the user mode driver run 
      configure.lua script, check 'Apply patch to MinGW' box and click OK 
      once again


  Version 3.2.1 (41.0)   2009-10-06
  ------------------------------------------------------------------------------
    - shutdown after a job feature was added to GUI
    - hibernate after a job feature was added to GUI
    - `boot-on` and `boot-off` commands were added to boot time defragger
    - Scheduler has been translated into Spanish (AR) language
    - Hibernate command line tool was added
    - few bugs were fixed


  Version 3.2.0 (41.0)   2009-09-29
  ------------------------------------------------------------------------------
    - Ultra Fast NTFS scanning feature was added, NTFS analysis becomes 
      approximately 25 times faster now
    - defragmentaion of additional streams attached to NTFS files was added 
    - information about trash (temporary files) excluded from reports,
      statistics and cluster map; these files are completely ignored now
    - a lot of new options were added to the console program
    - the \??\ sequence removed from file names in reports
    - Thai translation was made
    - some important parts of handbook were completely rewritten