@@ -15,7 +15,9 @@ call cleanup.cmd
 if "%1" equ "--clean" goto end
 
 set UDEFRAG_PORTABLE=
+if "%1" equ "--portable" goto portable
 if "%2" neq "--portable" goto not_portable
+:portable
 set UDEFRAG_PORTABLE=1
 :not_portable 
 
@@ -64,6 +66,7 @@ rem The scheduler is not included in Micro Edition.
 
 :build_installer
 
+if "%1" equ "--portable" goto end
 if "%2" equ "--portable" goto end
 
 echo Build installer...
