@@ -13,7 +13,7 @@ Bottom=113
 
 [Field 2]
 Type=Label
-Text=The new user mode driver has the following advantages over the old kernel mode engine:\r\n\r\n1. It runs without any hacking on any modern versions of Windows.\r\n2. It gives you more safety, because it can never produce the blue screen of death (BSOD).\r\n3. It works fine on x64 systems for which kernel mode engine is no more available due to the x64 C compiler internal bugs.\r\n\r\nOn the other hand kernel mode driver is a little bit faster and can also be used for experimental and educational purposes.
+Text=The new user mode driver has the following advantages over the old kernel mode engine:\r\n\r\n1. It runs without any hacking on any modern version of Windows.\r\n2. It gives you more safety, because it can never produce the blue screen of death (BSOD).\r\n3. It works fine on x64 systems for which kernel mode engine is no more available due to the x64 C compiler internal bugs.\r\n\r\nOn the other hand kernel mode driver is a little bit faster and can also be used for experimental and educational purposes.
 Left=0
 Right=262
 Top=1
